Bugs fixed, scrollbar behind confirmation screen now is locked

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ body {
     background-color: #E5E5E5;
 }
 
+.lock {
+    overflow: hidden;
+}
+
 * {
     box-sizing: border-box;
 }
